--- a/User/src/main/resources/templates/index.html
+++ b/User/src/main/resources/templates/index.html
@@ -8,6 +8,11 @@
 	<h3>User 실습</h3>
 	
 	<a href="/User/user1/list">user1 목록</a>
+	<a href="/User/user2/list">user2 목록</a>
+	<a href="/User/user3/list">user3 목록</a>
+	<a href="/User/user4/list">user4 목록</a>
+	<a href="/User/user5/list">user5 목록</a>
+	<a href="/User/user6/list">user6 목록</a>
 
 </body>
 </html>
