--- a/User/src/main/resources/templates/user2/modify.html
+++ b/User/src/main/resources/templates/user2/modify.html
@@ -2,30 +2,30 @@
 <html xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="UTF-8">
-		<title>user1::register</title>
+		<title>user2::modify</title>
 	</head>
 <body>
-	<h3>user1 등록</h3>
+	<h3>user2 수정</h3>
 	<a href="/User">User 메인</a>
-	<a href="/User/user1/list">user1 목록</a>
+	<a href="/User/user2/list">user2 목록</a>
 	
-	<form action="/User/user1/register" method="post">
+	<form action="/User/user2/modify" method="post">
 		<table border="1">
 			<tr>
 				<td>아이디</td>
-				<td><input type="text" name="uid"></td>
+				<td><input type="text" name="uid" th:value="${user.uid}" readonly="readonly"></td>
 			</tr>
 			<tr>
 				<td>이름</td>
-				<td><input type="text" name="name"></td>
+				<td><input type="text" name="name" th:value="${user.name}"></td>
 			</tr>
 			<tr>
 				<td>휴대폰</td>
-				<td><input type="text" name="hp"></td>
+				<td><input type="text" name="hp" th:value="${user.hp}"></td>
 			</tr>
 			<tr>
 				<td>나이</td>
-				<td><input type="number" name="age"></td>
+				<td><input type="number" name="age" th:value="${user.age}"></td>
 			</tr>
 			<tr>
 				<td colspan="2" align="right"><input type="submit" value="등록"></td>
