--- a/User/src/main/resources/templates/user4/register.html
+++ b/User/src/main/resources/templates/user4/register.html
@@ -2,30 +2,33 @@
 <html xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="UTF-8">
-		<title>user1::register</title>
+		<title>user4::register</title>
 	</head>
 <body>
-	<h3>user1 등록</h3>
+	<h3>user4 등록</h3>
 	<a href="/User">User 메인</a>
-	<a href="/User/user1/list">user1 목록</a>
+	<a href="/User/user4/list">user4 목록</a>
 	
-	<form action="/User/user1/register" method="post">
+	<form action="/User/user4/register" method="post">
 		<table border="1">
-			<tr>
-				<td>아이디</td>
-				<td><input type="text" name="uid"></td>
-			</tr>
 			<tr>
 				<td>이름</td>
 				<td><input type="text" name="name"></td>
 			</tr>
 			<tr>
-				<td>휴대폰</td>
-				<td><input type="text" name="hp"></td>
+				<td>성별</td>
+				<td>
+				<input type="radio" name="gender" value="1">남
+				<input type="radio" name="gender" value="2">여
+				</td>
 			</tr>
 			<tr>
 				<td>나이</td>
 				<td><input type="number" name="age"></td>
+			</tr>
+			<tr>
+				<td>주소</td>
+				<td><input type="text" name="addr"></td>
 			</tr>
 			<tr>
 				<td colspan="2" align="right"><input type="submit" value="등록"></td>
