--- a/Ch07/src/main/resources/templates/index.html
+++ b/Ch07/src/main/resources/templates/index.html
@@ -7,11 +7,36 @@
 <body>
 	<h3>JPA 실습하기</h3>
 	
+	<h4>JPA 기본메서드 실습</h4>
 	<a th:href="@{/user1/list}">user1 목록</a>
 	<a th:href="@{/user2/list}">user2 목록</a>
 	<a th:href="@{/user3/list}">user3 목록</a>
 	<a th:href="@{/user4/list}">user4 목록</a>
 	<a th:href="@{/user5/list}">user5 목록</a>
 	<a th:href="@{/user6/list}">user6 목록</a>
+	
+	<h4>JPA 쿼리메서드 실습</h4>
+	<a th:href="@{/query1}">query1</a><br>
+	<a th:href="@{/query2}">query2</a><br>
+	<a th:href="@{/query3}">query3</a><br>
+	<a th:href="@{/query4}">query4</a><br>
+	<a th:href="@{/query5}">query5</a><br>
+	<a th:href="@{/query6}">query6</a><br>
+	<a th:href="@{/query7}">query7</a><br>
+	<a th:href="@{/query8}">query8</a><br>
+	<a th:href="@{/query9}">query9</a><br>
+	<a th:href="@{/query10}">query10</a><br>
+	<a th:href="@{/query11}">query11</a><br>
+	<a th:href="@{/query12}">query12</a><br>
+	<a th:href="@{/query13}">query13</a><br>
+	<a th:href="@{/query14}">query14</a><br>
+	<a th:href="@{/query15}">query15</a><br>
+	<a th:href="@{/query16}">query16</a><br>
+	<a th:href="@{/query17}">query17</a><br>
+	<a th:href="@{/query18}">query18</a><br>
+	<a th:href="@{/query19}">query19</a><br>
+	<a th:href="@{/query20}">query20</a><br>
+	<a th:href="@{/query21}">query21</a><br>
+	<a th:href="@{/query22}">query22</a><br>
 </body>
 </html>
