--- a/Ch08/src/main/resources/templates/user2/login.html
+++ b/Ch08/src/main/resources/templates/user2/login.html
@@ -7,6 +7,7 @@
 <body>
 	<h3>user2 login</h3>
 	<a th:href="@{/}">메인이동</a>
+	<a th:href="@{/user2/register}">회원가입</a>
 	<form th:action="@{#}" method="post">
 		<table border="1">
 			<tr>
