--- a/Ch08/src/main/resources/templates/user2/loginSuccess.html
+++ b/Ch08/src/main/resources/templates/user2/loginSuccess.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-	  xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+	  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 	<head>
 		<meta charset="UTF-8">
 		<title>user2::login</title>
 	</head>
 <body>
 	<h3>user2 loginSuccess</h3>
-	<p>
-		<span sec:authentication="name">홍길동</span>님 반갑습니다.<br>
+	
+	
+	<p sec:authorize="isAuthenticated()">
+		아이디 : <span>[[${#authentication.principal.uid}]]</span><br>
+		이름 : <span>[[${#authentication.principal.name}]]</span><br>
+		휴대폰 : <span sec:authentication="principal.hp">휴대폰번호</span><br>
+		나이 : <span sec:authentication="principal.age">나이</span><br>
+		날짜 : <span sec:authentication="principal.rdate">가입일</span><br>
 		<a th:href="@{/user2/logout}">로그아웃</a>
+	</p>
+	
+	<p sec:authorize="isAnonymous()">
+		로그인을 해야 합니다.
+		<a th:href="@{/user2/login}">로그인</a>
 	</p>
 </body>
 </html>
