--- a/Sboard/src/main/resources/templates/list.html
+++ b/Sboard/src/main/resources/templates/list.html
@@ -27,25 +27,29 @@
                     <th>날짜</th>
                     <th>조회</th>
                 </tr>
-                <tr>
-                    <td>1</td>
-                    <td><a href="./view.html">테스트 제목입니다.[3]</a></td>
-                    <td>길동이</td>
-                    <td>20-05-12</td>
-                    <td>12</td>
+                <tr th:each="article:${articles}">
+                    <td>[[${article.no}]]</td>
+                    <td><a th:href="@{view}" th:text="${article.title+' ['+article.comment+']'}"></a></td>
+                    <td>[[${article.nick}]]</td>
+                    <td>[[${article.rdate}]]</td>
+                    <td>[[${article.hit}]]</td>
                 </tr>               
                 
             </table>
 
             <div class="page">
-                <a href="#" class="prev">이전</a>
-                <a href="#" class="num current">1</a>
-                <a href="#" class="num">2</a>
-                <a href="#" class="num">3</a>
-                <a href="#" class="next">다음</a>
+				<th:block th:if="${groups[0] > 1}">            
+                	<a th:href="@{/list(pg=${groups[0]-1})}" class="prev">이전</a>
+               	</th:block>
+               	<th:block th:each="num:${#numbers.sequence(groups[0], groups[1])}">
+                	<a th:href="@{/list(pg=${num})}" th:class="${num==currentPage?'num current':'num'}">[[${num}]]</a>
+               	</th:block>
+               	<th:block th:if="${groups[1] < lastPage}">
+                	<a th:href="@{/list(pg=${groups[1] + 1})}" class="next">다음</a>
+               	</th:block>
             </div>
 
-            <a href="./write.html" class="btnWrite">글쓰기</a>
+            <a th:href="@{/write}" class="btnWrite">글쓰기</a>
 
         </main>
 
