Sboard 게시판 50% 진행중

--- a/Sboard/src/main/resources/templates/modify.html
+++ b/Sboard/src/main/resources/templates/modify.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
     <title>글수정</title>    
@@ -10,32 +11,32 @@
         <header>
             <h3>Board System v1.0</h3>
             <p>
-                <span class="nick">길동이</span>님 반갑습니다.
-                <a href="#" class="logout">[로그아웃]</a>
+                <span class="nick">[[${#authentication.principal.user.nick}]]</span>님 반갑습니다.
+                <a th:href="@{/user/logout}" class="logout">[로그아웃]</a>
             </p>
         </header>
 
         <main id="board" class="modify">
             
-            <form action="#">
+            <form th:action="@{/modify(no=${article.no})}" method="post" enctype="multipart/form-data">
                 <table border="0">
                     <caption>글수정</caption>
                     <tr>
                         <th>제목</th>
-                        <td><input type="text" name="title" placeholder="제목을 입력하세요."/></td>
+                        <td><input type="text" name="title" th:value="${article.title}"/></td>
                     </tr>
                     <tr>
                         <th>내용</th>
-                        <td><textarea name="content"></textarea></td>
+                        <td><textarea name="content">[[${article.content}]]</textarea></td>
                     </tr>
-                    <tr>
+                    <tr th:if="${article.file == 1}">
                         <th>파일</th>
-                        <td><input type="file" name="file"/></td>
+                        <td><input type="file" name="fname"/>[[${article.fileVO.oriName}]]</td>
                     </tr>
                 </table>
 
                 <div>
-                    <a href="./view.html" class="btn btnCancel">취소</a>
+                    <a th:href="@{/view(no=${article.no})}" class="btn btnCancel">취소</a>
                     <input type="submit" value="수정완료" class="btn btnComplete"/>
                 </div>
             </form>
