--- a/Sboard/src/main/resources/templates/write.html
+++ b/Sboard/src/main/resources/templates/write.html
@@ -19,8 +19,6 @@
         <main id="board" class="write">
             
             <form th:action="@{/write}" method="post" enctype="multipart/form-data">
-            	<input type="hidden" name="uid" th:value="${#authentication.principal.user.uid}">
-            	<input type="hidden" name="regip" th:value="${#authentication.details.remoteAddress}">
                 <table border="0">
                     <caption>글쓰기</caption>
                     <tr>
@@ -38,7 +36,7 @@
                 </table>
 
                 <div>
-                    <a th:href="@{list}" class="btn btnCancel">취소</a>
+                    <a th:href="@{/list}" class="btn btnCancel">취소</a>
                     <input type="submit" value="작성완료" class="btn btnComplete"/>
                 </div>
             </form>
