--- a/Sboard/src/main/resources/templates/list.html
+++ b/Sboard/src/main/resources/templates/list.html
@@ -29,7 +29,7 @@
                 </tr>
                 <tr th:each="article:${articles}">
                     <td>[[${article.no}]]</td>
-                    <td><a th:href="@{view}" th:text="${article.title+' ['+article.comment+']'}"></a></td>
+                    <td><a th:href="@{/view(no=${article.no})}" th:text="${article.title+' ['+article.comment+']'}"></a></td>
                     <td>[[${article.nick}]]</td>
                     <td>[[${article.rdate}]]</td>
                     <td>[[${article.hit}]]</td>
