팜스토리 기능구현

--- a/Farmstory/src/main/resources/templates/user/terms.html
+++ b/Farmstory/src/main/resources/templates/user/terms.html
@@ -5,8 +5,8 @@
                 <caption>사이트 이용약관</caption>
                 <tr>
                     <td>
-                        <textarea class="terms" readonly></textarea>
-                        <label><input type="checkbox" class="terms">&nbsp;동의합니다.</label>
+                        <textarea class="terms" readonly>[[${termsVO.terms}]]</textarea>
+                        <label><input type="checkbox" class="terms">&nbsp;&nbsp;동의합니다.</label>
                     </td>
                 </tr>
             </table>
@@ -15,8 +15,8 @@
                 <caption>개인정보 취급방침</caption>
                 <tr>
                     <td>
-                        <textarea class="privacy" readonly></textarea>
-                        <label><input type="checkbox" class="privacy">&nbsp;동의합니다.</label>
+                        <textarea class="privacy" readonly>[[${termsVO.privacy}]]</textarea>
+                        <label><input type="checkbox" class="privacy">&nbsp;&nbsp;동의합니다.</label>
                     </td>
                 </tr>
             </table>
