--- a/Farmstory/src/main/resources/templates/_header.html
+++ b/Farmstory/src/main/resources/templates/_header.html
@@ -27,14 +27,16 @@
 <body>
 <div id="wrapper">
     <header>
-        <a th:href="@{/index}" class="logo"><img th:src="@{/img/logo.png}" alt="로고"/></a>
+        <a th:href="@{/}" class="logo"><img th:src="@{/img/logo.png}" alt="로고"/></a>
         <p>
+            <span sec:authorize="isAuthenticated()" class="nick"><span style="font-weight:bold; font-size: 1em">[[${#authentication.principal.user.nick}]]</span>님 반갑습니다. |</span>
             <a th:href="@{/}">HOME |</a>
-            <a th:href="@{/user/login}">로그인 |</a>
-            <a th:href="@{/user/terms}">회원가입 |</a>
+            <a sec:authorize="isAnonymous()" th:href="@{/user/login}">로그인 |</a>
+            <a sec:authorize="isAnonymous()" th:href="@{/user/terms}">회원가입 |</a>
+            <a sec:authorize="isAuthenticated()" th:href="@{/user/logout}">로그아웃 |</a>
             <a href="#">고객센터</a>
         </p>
-        <img tH:src="@{/img/head_txt_img.png}" alt="3만원 이상 무료배송"/>
+        <img th:src="@{/img/head_txt_img.png}" alt="3만원 이상 무료배송"/>
 
         <ul class="gnb">
             <li><a th:href="@{/introduction/hello}">팜스토리소개</a></li>
