--- a/Farmstory/src/main/resources/templates/user/login.html
+++ b/Farmstory/src/main/resources/templates/user/login.html
@@ -12,6 +12,10 @@
                         <td><input type="password" name="pass" placeholder="비밀번호 입력"/></td>
                     </tr>
                 </table>
+                <div class="custom-control custom-checkbox small">
+                    <input type="checkbox" class="custom-control-input" id="customCheck" name="remember-me">
+                    <label class="custom-control-label" for="customCheck">로그인 상태 유지</label>
+                </div>
                 <input type="submit" class="btnLogin" value="로그인"/>
             </form>
 
