--- a/Farmstory/src/main/resources/templates/board/write.html
+++ b/Farmstory/src/main/resources/templates/board/write.html
@@ -4,11 +4,7 @@
 
         <main id="board" class="write">
 
-            <form th:action="@{/write}" method="post" enctype="multipart/form-data">
-                <!--/*
-                <input type="hidden" name="uid" th:value="${#authentication.principal.user.uid}">
-                <input type="hidden" name="regip" th:value="${#authentication.details.remoteAddress}">
-                */-->
+            <form th:action="@{/board/write}" method="post" enctype="multipart/form-data">
                 <table border="0">
                     <caption>글쓰기</caption>
                     <tr>
