--- a/Farmstory/src/main/resources/templates/board/list.html
+++ b/Farmstory/src/main/resources/templates/board/list.html
@@ -12,29 +12,25 @@
                     <th>날짜</th>
                     <th>조회</th>
                 </tr>
-                <!--/*
                 <tr th:each="article:${articles}">
                     <td>[[${article.no}]]</td>
-                    <td><a th:href="@{/view(no=${article.no})}" th:text="${article.title+' ['+article.comment+']'}"></a></td>
+                    <td><a th:href="@{/board/view(group=${group},cate=${cate},no=${article.no})}" th:text="${article.title+' ['+article.comment+']'}"></a></td>
                     <td>[[${article.nick}]]</td>
                     <td>[[${article.rdate}]]</td>
                     <td>[[${article.hit}]]</td>
                 </tr>
-                */-->
             </table>
 
             <div class="page">
-                <!--/*
-				<th:block th:if="${groups[0] > 1}">            
-                	<a th:href="@{/list(pg=${groups[0]-1})}" class="prev">이전</a>
+				<th:block th:if="${groups[0] > 1}">
+                	<a th:href="@{/board/list(group=${group},cate=${cate},pg=${groups[0]-1})}" class="prev">이전</a>
                	</th:block>
                	<th:block th:each="num:${#numbers.sequence(groups[0], groups[1])}">
-                	<a th:href="@{/list(pg=${num})}" th:class="${num==currentPage?'num current':'num'}">[[${num}]]</a>
+                	<a th:href="@{/board/list(group=${group},cate=${cate},pg=${num})}" th:class="${num == currentPage ? 'num current' : 'num'}">[[${num}]]</a>
                	</th:block>
                	<th:block th:if="${groups[1] < lastPage}">
-                	<a th:href="@{/list(pg=${groups[1] + 1})}" class="next">다음</a>
+                	<a th:href="@{/board/list(group=${group},cate=${cate},pg=${groups[1] + 1})}" class="next">다음</a>
                	</th:block>
-               	*/-->
             </div>
 
             <a th:href="@{/board/write(group=${group},cate=${cate})}" class="btnWrite">글쓰기</a>
