--- a/Farmstory/src/main/resources/templates/board/view.html
+++ b/Farmstory/src/main/resources/templates/board/view.html
@@ -5,7 +5,6 @@
             
             <table>
                 <caption>글보기</caption>
-                <!--/*
                 <tr>
                     <th>제목</th>
                     <td><input type="text" name="title" th:value="${article.title}" readonly/></td>
@@ -18,12 +17,11 @@
                     <th>내용</th>
                     <td><textarea name="content" readonly>[[${article.content}]]</textarea></td>
                 </tr>
-*/-->
             </table>
 
-            <div><!-- ,no=${article.no}) -->
+            <div>
                 <a th:href="@{/#}" class="btn btnRemove">삭제</a>
-                <a th:href="@{/board/modify(group=${group},cate=${cate})}" class="btn btnModify">수정</a>
+                <a th:href="@{/board/modify(group=${group},cate=${cate},no=${article.no})}" class="btn btnModify">수정</a>
                 <a th:href="@{/board/list(group=${group},cate=${cate})}" class="btn btnList">목록</a>
             </div>
 
