팜스토리 수정 / 공공데이터 API 수차

--- a/Farmstory/src/main/resources/templates/user/terms.html
+++ b/Farmstory/src/main/resources/templates/user/terms.html
@@ -1,5 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <th:block th:replace="~{/_header.html}"/>
+<script th:src="@{/js/terms.js}"></script>
         <main id="user" class="terms">
             <table border="0">
                 <caption>사이트 이용약관</caption>
