--- a/Farmstory/src/main/resources/templates/user/register.html
+++ b/Farmstory/src/main/resources/templates/user/register.html
@@ -1,88 +1,88 @@
 <html xmlns:th="http://www.thymeleaf.org">
-<script th:src="@{/js/register.js}"></script>
-<th:block th:replace="~{/_header.html}"/>
-        <main id="user" class="register">
+<th:block th:include="@{_header.html}"></th:block>
+<script th:src="@{/js/validation.js}"></script>
+<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+<script th:src="@{/js/zipcode.js}"></script>
+<main id="user" class="register">
+    <form th:action="@{/user/register}" method="post">
+        <table border="1">
+            <caption>사이트 이용정보 입력</caption>
+            <tr>
+                <th>아이디</th>
+                <td>
+                    <input type="text" name="uid" placeholder="아이디 입력" maxlength="20" required/>
+                    <button type="button" id="btnCheckUid"><img th:src="@{/img/chk_id.gif}" alt="중복확인"/></button>
+                    <span class="resultUid"></span>
+                </td>
+            </tr>
+            <tr>
+                <th>비밀번호</th>
+                <td>
+                    <input type="password" name="pass" placeholder="비밀번호 입력" maxlength="255" required/>
+                </td>
+            </tr>
+            <tr>
+                <th>비밀번호 확인</th>
+                <td>
+                    <input type="password" id="passCheck" name="passCheck" placeholder="비밀번호 입력 확인" maxlength="255" required/>
+                    <span class="resultPass"></span>
+                </td>
+            </tr>
+        </table>
 
-            <form th:action="@{register}" method="post">
-                <table border="1">
-                    <caption>사이트 이용정보 입력</caption>
-                    <tr>
-                        <th>아이디</th>
-                        <td>
-                            <input type="text" name="uid" placeholder="아이디 입력" maxlength="20" required/>
-                            <button type="button" id="btnCheckUid"><img th:src="@{/img/chk_id.gif}" alt="중복확인"/></button>
-                            <span class="resultUid"></span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>비밀번호</th>
-                        <td>
-                            <input type="password" name="pass" placeholder="비밀번호 입력" maxlength="255" required/>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>비밀번호 확인</th>
-                        <td>
-                            <input type="password" id="passCheck" name="passCheck" placeholder="비밀번호 입력 확인" maxlength="255" required/>
-                            <span class="resultPass"></span>
-                        </td>
-                    </tr>
-                </table>
+        <table border="1">
+            <caption>개인정보 입력</caption>
+            <tr>
+                <th>이름</th>
+                <td>
+                    <input type="text" name="name" placeholder="이름 입력" maxlength="20" required/>
+                    <span class="resultName"></span>
+                </td>
+            </tr>
+            <tr>
+                <th>별명</th>
+                <td>
+                    <p>공백없이 한글, 영문, 숫자 입력</p>
+                    <input type="text" name="nick" placeholder="별명 입력" maxlength="20" required/>
+                    <button type="button" id="btnNickCheck"><img th:src="@{/img/chk_id.gif}" alt="중복확인"/></button>
+                    <span class="resultNick"></span>
+                </td>
+            </tr>
+            <tr>
+                <th>이메일</th>
+                <td>
+                    <input type="email" name="email" placeholder="이메일 입력" maxlength="100" required/>
+                    <button type="button" id="btnEmailCheck"><img th:src="@{/img/chk_auth.gif}" alt="인증번호 받기"/></button>
+                    <span class="resultEmail"></span>
+                    <div class="auth">
+                        <input type="text" name="auth" placeholder="인증번호 입력"/>
+                        <button type="button" id="btnEmailConfirm"><img th:src="@{/img/chk_confirm.gif}" alt="확인"/></button>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <th>휴대폰</th>
+                <td>
+                    <input type="text" name="hp" placeholder="- 포함 13자리 입력" maxlength="13" required/>
+                    <button type="button" id="btnHpCheck"><img th:src="@{/img/chk_id.gif}" alt="중복확인"/></button>
+                    <span class="resultHp"></span>
+                </td>
+            </tr>
+            <tr>
+                <th>주소</th>
+                <td>
+                    <input type="text" name="zip" id="zip" placeholder="우편번호 검색" readonly/>
+                    <button type="button" onclick="zipcode()"><img th:src="@{/img/chk_post.gif}" alt="우편번호 찾기"/></button>
+                    <input type="text" name="addr1" id="addr1" placeholder="기본주소 검색" readonly/>
+                    <input type="text" name="addr2" id="addr2" placeholder="상세주소 입력" maxlength="255"/>
+                </td>
+            </tr>
+        </table>
 
-                <table border="1">
-                    <caption>개인정보 입력</caption>
-                    <tr>
-                        <th>이름</th>
-                        <td>
-                            <input type="text" name="name" placeholder="이름 입력" maxlength="20" required/>
-                            <span class="resultName"></span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>별명</th>
-                        <td>
-                            <p>공백없이 한글, 영문, 숫자 입력</p>
-                            <input type="text" name="nick" placeholder="별명 입력" maxlength="20" required/>
-                            <button type="button" id="btnNickCheck"><img th:src="@{/img/chk_id.gif}" alt="중복확인"/></button>
-                            <span class="resultNick"></span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>이메일</th>
-                        <td>
-                            <input type="email" name="email" placeholder="이메일 입력" maxlength="100" required/>
-                            <button type="button" id="btnEmailCheck"><img th:src="@{/img/chk_auth.gif}" alt="인증번호 받기"/></button>
-                            <span class="resultEmail"></span>
-                            <div class="auth">
-                                <input type="text" name="auth" placeholder="인증번호 입력"/>
-                                <button type="button" id="btnEmailConfirm"><img th:src="@{/img/chk_confirm.gif}" alt="확인"/></button>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>휴대폰</th>
-                        <td>
-                            <input type="text" name="hp" id="hpCheck" placeholder="- 포함 13자리 입력" maxlength="13" required/>
-                            <span class="resultHp"></span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>주소</th>
-                        <td>
-                            <input type="text" name="zip" id="zip" placeholder="우편번호 검색" readonly/>
-                            <button type="button" onclick="zipcode()"><img th:src="@{/img/chk_post.gif}" alt="우편번호 찾기"/></button>
-                            <input type="text" name="addr1" id="addr1" placeholder="기본주소 검색" readonly/>
-                            <input type="text" name="addr2" id="addr2" placeholder="상세주소 입력" maxlength="255"/>
-                        </td>
-                    </tr>
-                </table>
-
-                <div>
-                    <a th:href="@{/user/login}" class="btnCancel">취소</a>
-                    <input type="submit" class="btnRegister" value="회원가입"/>
-                </div>
-            </form>            
-        </main>
-
-<th:block th:replace="~{/_footer.html}"/>
-</html>
+        <div>
+            <a th:href="@{/user/login}" class="btnCancel">취소</a>
+            <input type="submit" class="btnRegister" value="회원가입"/>
+        </div>
+    </form>
+</main>
+<th:block th:include="@{_footer.html}"></th:block>
